@@ -4,8 +4,8 @@ import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import javax.annotation.Nullable;
-import javax.persistence.*;
+import jakarta.annotation.Nullable;
+import jakarta.persistence.*;
 
 import org.hibernate.annotations.Cache;
 import org.hibernate.annotations.CacheConcurrencyStrategy;
@@ -252,7 +252,7 @@ public abstract class Participation extends DomainObject implements Participatio
         if (sortedResultsWithCompletionDate.isEmpty()) {
             return null;
         }
-        return sortedResultsWithCompletionDate.get(0);
+        return sortedResultsWithCompletionDate.getFirst();
     }
 
     /**
@@ -313,15 +313,6 @@ public abstract class Participation extends DomainObject implements Participatio
         return getClass().getSimpleName() + "{" + "id=" + getId() + ", initializationState=" + initializationState + ", initializationDate=" + initializationDate + ", results="
                 + results + ", submissions=" + submissions + ", submissionCount=" + submissionCountTransient + "}";
     }
-
-    /**
-     * NOTE: do not use this in a transactional context and do not save the returned object to the database
-     * This method is useful when we want to cut off attributes while sending entities to the client and we are only interested in the id of the object
-     * We use polymorphism here, so subclasses should implement / override this method to create the correct object type
-     *
-     * @return an empty participation just including the id of the object
-     */
-    public abstract Participation copyParticipationId();
 
     public abstract void filterSensitiveInformation();
 
