@@ -2,7 +2,7 @@ package de.tum.in.www1.artemis.repository.iris;
 
 import java.util.List;
 
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Query;
@@ -76,6 +76,6 @@ public interface IrisChatSessionRepository extends JpaRepository<IrisChatSession
         if (result.isEmpty()) {
             throw new EntityNotFoundException("Iris Chat Session");
         }
-        return result.get(0);
+        return result.getFirst();
     }
 }
